--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
             <table></table>
         </div>
         <div class="horizontal">
+            <div class="horizontal">
+                <p>Choose the Alive colour:</p>
+                <input type="color" id="aliveColour" value="#000000"/>
+            </div>
+            <div class="horizontal">
+                <p>Choose the Dead colour</p>
+                <input type="color" id="deadColour" value="#ffffff"/>
+            </div>
+        </div>
+        <div class="horizontal">
             <div class="vertical">
                 <div class="horizontal">
                     <p>Generations:</p><input type="number" id="gens" value="50">
